fix content is outside the container on mobile

--- a/public/assets/css/ci-theme.css
+++ b/public/assets/css/ci-theme.css
@@ -111,6 +111,10 @@
 
 /* HELPERS ================================================================== */
 
+pre {
+	overflow: auto;
+}
+
 .clr {
 	clear: both;
 	}
